syntax = "proto3";

option go_package = "go-grpc/server/proto";

package hello_world;

service HelloWorld {
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {}
}

message GetMessageRequest {  }
message GetMessageResponse {
  string message = 1;
}